<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">Aura</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification message</string>

    <string name="albums_tab">Albums</string>
    <string name="artists_tab">Artists</string>
    <string name="songs_tab">Songs</string>
    <string name="genres_tab">Genres</string>
    <string name="playlists_tab">Playlists</string>

    <string name="all_songs_artist_detail">All Songs</string>
    <string name="all_albums_artist_detail">All Albums</string>

    <string name="repeat_this_song">Repeat this song</string>
    <string name="repeat_all_songs">Repeat all song</string>
    <string name="repeat_mode_off">Repeat mode off</string>
    <string name="shuffle_mode_on">Shuffle mode on</string>
    <string name="shuffle_mode_off">Shuffle mode off</string>

    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="song">Song</string>

    <string name="album_artist_and_no_of_songs">%1$s | %2$d song</string>
    <string name="album_artist_and_one_song">%1$s | %2$d song</string>

    <string name="one_song_one_album">%1$d song | %2$d album</string>
    <string name="no_of_song_one_album">%1$d song | %2$d album</string>
    <string name="one_song_no_of_album">%1$d song | %2$d albums</string>
    <string name="no_of_song_no_of_album">%1$d song | %2$d albums</string>

    <string name="one_song">%d song</string>
    <string name="no_of_songs">%d song</string>

    <string name="one_album">%d album</string>
    <string name="no_of_albums">%d albums</string>

    <string name="file_size_in_kb">%.2f KB</string>
    <string name="file_size_in_mb">%.2f MB</string>

    <string name="queue">Queue</string>

    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="edit_tags">Edit tags</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="go_to_album">Go to album</string>
    <string name="set_as_start_directory">Set as start directory</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>

    <string name="tageditor">Tag Editor</string>
    <string name="title">Song title</string>
    <string name="hint_songs">Song title</string>
    <string name="album">Album</string>
    <string name="hint_album">Album name</string>
    <string name="artist">Artist</string>
    <string name="hint_artist">Artist name</string>
    <string name="album_artist">Album-Artist</string>
    <string name="genre">Genre</string>
    <string name="hint_genre">Genre name</string>
    <string name="hint_year">Year</string>
    <string name="hint_track_no">Track number</string>

    <string name="tag_edited_message">Media tags edited successfully</string>

    <string name="delete_message">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="equalizer">Equalizer</string>
    <string name="equalizer_preset">Equalizer preset</string>
    <string name="hz">%d Hz</string>
    <string name="db">%d db</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="virtualizer" translatable="false">Virtualizer</string>
    <string name="preset_reverb">Preset Reverb</string>
    <string name="equalizer_custom">Custom</string>
    <string name="large_hall">Large Hall</string>
    <string name="large_room">Large Room</string>
    <string name="medium_hall">Medium Hall</string>
    <string name="medium_room">Medium Room</string>
    <string name="none">None</string>
    <string name="plate">Plate</string>
    <string name="small_room">Small Room</string>


    <string name="search">Search</string>
    <string name="search_hint">Search music player</string>
    <string name="pause_audio">Pause audio playback</string>

    <string name="settings">Settings</string>
    <string name="genreral">General</string>
    <string name="audio">Audio</string>
    <string name="headphones_disconnected">Headphones Disconnected</string>
    <string name="equalizer_summary">Use Aura Equalizer</string>
    <string name="pause_audio_summary">Pause audio when headset is disconnected</string>
    <string name="artwork">Artwork</string>
    <string name="download_artwork">Download Artwork Automatically</string>
    <string name="download_artist_images">Download Artist Images</string>
    <string name="only_over_wifi">Download Images Only Over Wi-Fi</string>
    <string name="only_over_wifi_summary">Images will only be downloaded over a Wi-Fi connection</string>
    <string name="ignore_mediastore_artwork">Ignore Mediastore Albumart</string>
    <string name="ignore_mediastore_artwork_summary">Can result in low resoultion images</string>
    <string name="delete_summary">Delete all cached images</string>
    <string name="delete_message_preference">Do you want to delete all cached image entries?</string>

    <string name="recently_added">Recently added</string>
    <string name="recently_played">Recently played</string>
    <string name="favourites">Favourites</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_already_exists">Playlist already exists</string>
    <string name="create">Create</string>
    <string name="song_added_to_playlist" formatted="false">%d Song added to %s</string>
    <string name="songs_added_to_playlist" formatted="false">%d Songs added to %s</string>

    <string name="io_error">Unable to play song</string>

    <string name="label_back">Skip to previous</string>
    <string name="label_forward">Skip to next</string>
    <string name="label_play_pause">Pause or Play</string>
    <string name="label_shuffle">Shuffle</string>
    <string name="label_repeat">Repeat</string>

    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>

    <string name="music_library">Music Library</string>
    <string name="folders">Folders</string>
    <string name="audio_effects">Audio Effects</string>

    <string name="selected">%d Selected</string>
    <string name="delete_selected_songs">Delete selected song</string>

    <string name="artist_biography">%s Biography</string>

    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="name_details">Song Name: %s</string>
    <string name="artist_details">Artist: %s</string>
    <string name="album_details">Album: %s</string>
    <string name="album_artist_details">Album-Artist: %s</string>
    <string name="cd_track_no_details">Track No.: %s</string>
    <string name="genre_details">Genre: %s</string>
    <string name="path_details">Path: %s</string>
    <string name="date_details">Date: %s</string>
    <string name="bitrate_details">Bitrate: %d kbps</string>

    <string name="notification_channel" translatable="false">Aura Notification Channel</string>
    <string name="notification_channel_description" translatable="false">Aura Notification Channel Description</string>

    <string name="track_no_error">Track number not entered correctly</string>

    <string name="separator">/</string>

    <string name="save">Save</string>

    <string name="about">About</string>

    <string name="version">Version 1.2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>