<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/play_next_album_all_songs"
        android:title="@string/play_next"/>

    <item android:id="@+id/add_to_queue_album_all_songs"
        android:title="@string/add_to_queue"/>

    <item android:id = "@+id/add_to_playlist_album_all_songs"
        android:title="@string/add_to_playlist"/>

    <item android:id="@+id/edit_tags"
        android:title="@string/edit_tags"/>

    <item android:id="@+id/go_to_artist_album_all_songs"
        android:title="@string/go_to_artist"/>

    <item android:id = "@+id/details"
        android:title="@string/details"/>

    <item android:id="@+id/delete_album_all_songs"
        android:title="@string/delete"/>

</menu>