<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/add_to_queue"
        android:icon="@drawable/add_to_queue"
        android:label="@string/add_to_queue"
        android:title="@string/add_to_queue"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:label="@string/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/add_to_playlist"
        android:icon="@drawable/add_to_playlist_white"
        android:label="@string/add_to_playlist"
        android:title="@string/add_to_playlist"
        app:showAsAction="ifRoom"/>

</menu>